--- a/main.css
+++ b/main.css
@@ -23,6 +23,10 @@ html {
 
 nav {
     position: fixed;
+    bottom: 0;
+    margin-left: 40%;
+    margin-right: 40%;
+    text-align: center;
 }
 
 span {
@@ -117,5 +121,9 @@ li {
         opacity: 0;
     }
 }
-
 /* for media qu in pre add     white-space: normal; */
+@media only screen and (max-width: 768px) {
+    pre {
+        white-space: normal;
+    }
+  }
