--- a/main.css
+++ b/main.css
@@ -184,7 +184,9 @@ nav ul li:hover {
 span {
     white-space: pre-wrap; 
 }
-
+.clipboard{
+    position: absolute; 
+}
 .code-container {
     word-wrap: break-word;
 }
@@ -242,8 +244,8 @@ pre {
     visibility: 1;
     opacity: 1;
 }
-
-pre:after {
+.preBlink:after,
+.typewriter:after {
     content: "|";
     color: var(--white);
     animation: blink-anim 0.7s linear infinite normal ;
@@ -268,7 +270,9 @@ pre:after {
 }
 /*  Responsive Media Queries  */
 @media only screen and (max-width: 768px) {
-
+    pre{
+        white-space: pre-wrap;
+    }
     nav {
         height: 40%;
         width: 100%;
